--- a/wp-content/themes/wingman/assets/css/woocommerce.css
+++ b/wp-content/themes/wingman/assets/css/woocommerce.css
@@ -563,7 +563,7 @@
       width: 20px;
       height: 20px;
       border: 1px solid #e5e5e5;
-      line-height: 18px; }
+      line-height: 17px; }
       .bag-products .bag-product a.remove:after {
         margin: 0;
         font-size: 12px; }
@@ -1476,7 +1476,9 @@ body .mCSB_scrollTools {
   float: none; }
   .woocommerce-page .cart-collaterals .cart_totals table,
   .woocommerce .cart-collaterals .cart_totals table {
-    width: 100%; }
+    width: 100%;
+    border-bottom: 1px solid #e5e5e5;
+    margin-bottom: 15px; }
 
 .woocommerce-cart .wc-proceed-to-checkout {
   padding: 0;
@@ -1489,6 +1491,8 @@ body .mCSB_scrollTools {
   line-height: 21px; }
 .woocommerce-cart .cart-collaterals .cart_totals tr td {
   letter-spacing: 0.2em; }
+  .woocommerce-cart .cart-collaterals .cart_totals tr td strong {
+    font-weight: 300; }
 .woocommerce-cart .cart-collaterals .cart_totals tr th {
   padding: 12px 30px; }
 
@@ -1627,7 +1631,15 @@ body .mCSB_scrollTools {
         font-weight: normal; }
 
 .select2-container .select2-choice {
-  border-color: #e5e5e5; }
+  border: none;
+  border-bottom: 1px solid #e5e5e5;
+  line-height: 38px;
+  -webkit-border-radius: 0;
+  -khtml-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
+  border-radius: 0; }
 
 .select2-drop-active {
   border-color: #e5e5e5; }
@@ -1665,7 +1677,7 @@ body .mCSB_scrollTools {
           border-radius: 100%;
           position: absolute;
           left: -32px;
-          top: 3px;
+          top: 0;
           background: #FFFFFF;
           outline: none; }
       .woocommerce-checkout #payment ul.payment_methods li input {
